crates/mir/filetests/tests/valid_programs/bool_ops.mir
// @harness parser_roundtrip
// @harness typecheck_validation_succeeds
// @harness value_initialization_validation_succeeds
// @harness cfg_integrity_validation_succeeds
// @harness ssa_validation_succeeds
(mir
    (func bool_ops
        (return_type bool)
        (entry block0)
        (block block0
            (param a bool)
            (param b bool)
            (bool.and v0
                (a b))
            (bool.or v1
                (v0 a))
            (bool.xor v2
                (v1 v0))
            (bool.not v3
                (v2))
            (return (v3)))))