crates/mir/filetests/tests/invalid_programs/invalid_operands_int_add.mir
// @harness parser_roundtrip
// @harness typecheck_validation_fails
(mir
    (func foo
        (return_type int)
        (entry block0)
        (block block0
            (param v0 int)
            (param v1 bool)
            (int.add v2 (v0 v1))
            (return (v2)))))
